--- a/index.css
+++ b/index.css
@@ -22,8 +22,11 @@ body {
 }
 .my-picture {
   object-fit: contain;
-  height: 98%;
+  height: 98vh;
   display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
 }
 .info {
   width: 100%;
@@ -76,11 +79,15 @@ header > ul > li {
   }
   .background-skill {
     flex-direction: column;
+    margin-right: 30px;
   }
   .my-picture {
     display: block;
     margin-right: auto;
     margin-left: auto;
+  }
+  header {
+    flex-direction: column;
   }
 }
 .skills > ul > li {
@@ -88,6 +95,7 @@ header > ul > li {
 }
 .education {
   margin-left: 30px;
+  margin-right: 30px;
 }
 a {
   text-decoration: none;
