--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  text-align: justify;
 }
 * {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -17,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   color: aliceblue;
-  margin-top: 100px;
+  margin-top: 200px;
   height: 100%;
 }
 .my-picture {
