some more compatibility for smaller devices

--- a/index.css
+++ b/index.css
@@ -65,7 +65,9 @@ header > ul {
 header > ul > li {
   margin-right: 40px;
 }
-
+.my-background {
+  width: 85%;
+}
 .my-background,
 .skills {
   flex: 0.7;
@@ -75,6 +77,8 @@ header > ul > li {
   flex: 0.2;
 }
 @media (max-width: 750px) {
+  .my-picture {
+  }
   .about {
     flex-direction: column;
   }
